--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it-IT"
+<html lang="it-IT"></html>
 
 <header class="site-header">
   <div class="container container--lg">
