--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="it-IT"></html>
+<html lang="it-IT">
+    
 
 <header class="site-header">
   <div class="container container--lg">
