header.html: changed

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="it-IT">
-    
+    <head>
+        <meta
+    </head>
 
 <header class="site-header">
   <div class="container container--lg">
