--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="it-IT">
     <head>
-        <meta charset="utf"
+        <meta charset="utf-8"
     </head>
 
 <header class="site-header">
