header.html: changed

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
 <html lang="it-IT">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv
+        <meta http-equiv="X-UA-Compatible"
     </head>
 
 <header class="site-header">
