--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,8 @@
 <html lang="it-IT">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge"
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        
     </head>
 
 <header class="site-header">
