header.html: changed

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 
 </head>
-<body></body>
+<body
+<div class="atail  container-fluid  ">
+
+    <header class="atail-header">
+        <div class=" container-fluid ">
+            <div class="logo  atail-logo-portrait">
+                <a href="index.html">
+                    <span class="atail-text-logo">
+                        <img src="img/logo.svg" alt="">
+                    </span>
+                </a>
+            </div>
+            <div class="show-nav">
+                <span data-action="show-nav">
+                    <span>
+                        <span></span>
+                        <span></span>
+                    </span>
+                </span>
+            </div>
+            <nav class="row">
+                <div class="grid-bg row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-2"></div>
+                    <div class="col-md-2"></div>
+                    <div class="col-md-2"></div>
+                    <div class="col-md-2"></div>
+                    <div class="col-md-2"></div>
+                </div>
+                <ol id="menu-menu-1" class="nav-list">
+                    <li class="menu-item  current-menu-item col-xs-2 ">
+                        <a href="index.html"><span>Projects</span></a>
+                    </li>
+                    <li class="menu-item col-xs-2 ">
+                        <a href="about.html"><span>About</span></a>
+                    </li>
+                    <li class="menu-item  col-xs-2 ">
+                        <a href="team.html"><span>Team</span></a>
+                    </li>
+                    <li class="menu-item col-xs-2 ">
+                        <a href="services.html"><span>Services</span></a>
+                    </li>
+                    <li class="menu-item col-xs-2 ">
+                        <a href="contact.html"><span>Contact</span></a>
+                    </li>
+                    <li class="menu-item col-xs-2 ">
+                        <a href="blog.html"><span>Blog</span></a>
+                    </li>
+                    <li class="menu-item col-xs-2 ">
+                        <a href="typography.html"><span>Typography</span></a>
+                    </li>
+                </ol>
+            </nav>
+        </div>
+    </header></body>
 
 
 <header class="site-header">
