--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 
 </head>
-<body></body>
+<body>
 <div class="atail  container-fluid  ">
 
     <header class="atail-header">
