--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -60,7 +60,8 @@
                 </ol>
             </nav>
         </div>
-    </header></body>
+    </header>
+</body>
 
 
 <header class="site-header">
